--- a/internal/web/components/botGame.templ
+++ b/internal/web/components/botGame.templ
@@ -584,7 +584,7 @@ templ NewBotGame(difficulty int, playAsWhite bool, m *melody.Melody) {
       data-piece="N">Knight</div>
   </div>
 </div>
-<script type="module">
+<script type="module" >
   import "https://cdnjs.cloudflare.com/ajax/libs/dragula/3.7.3/dragula.min.js";
   var drake = dragula([
     // document.querySelector("#A1"), document.querySelector("#B1"), document.querySelector("#C1"), document.querySelector("#D1"), document.querySelector("#E1"), document.querySelector("#F1"), document.querySelector("#G1"), document.querySelector("#H1"),document.querySelector("#A2"), document.querySelector("#B2"), document.querySelector("#C2"), document.querySelector("#D2"), document.querySelector("#E2"), document.querySelector("#F2"), document.querySelector("#G2"), document.querySelector("#H2"),document.querySelector("#A3"), document.querySelector("#B3"), document.querySelector("#C3"), document.querySelector("#D3"), document.querySelector("#E3"), document.querySelector("#F3"), document.querySelector("#G3"), document.querySelector("#H3"),document.querySelector("#A4"), document.querySelector("#B4"), document.querySelector("#C4"), document.querySelector("#D4"), document.querySelector("#E4"), document.querySelector("#F4"), document.querySelector("#G4"), document.querySelector("#H4"),document.querySelector("#A5"), document.querySelector("#B5"), document.querySelector("#C5"), document.querySelector("#D5"), document.querySelector("#E5"), document.querySelector("#F5"), document.querySelector("#G5"), document.querySelector("#H5"),document.querySelector("#A6"), document.querySelector("#B6"), document.querySelector("#C6"), document.querySelector("#D6"), document.querySelector("#E6"), document.querySelector("#F6"), document.querySelector("#G6"), document.querySelector("#H6"),document.querySelector("#A7"), document.querySelector("#B7"), document.querySelector("#C7"), document.querySelector("#D7"), document.querySelector("#E7"), document.querySelector("#F7"), document.querySelector("#G7"), document.querySelector("#H7"),document.querySelector("#A8"), document.querySelector("#B8"), document.querySelector("#C8"), document.querySelector("#D8"), document.querySelector("#E8"), document.querySelector("#F8"), document.querySelector("#G8"), document.querySelector("#H8"),
@@ -674,8 +674,8 @@ templ NewBotGame(difficulty int, playAsWhite bool, m *melody.Melody) {
   let message;
   ws.onmessage = (msg) => {
     console.log(msg);
-    if (msg.data.startsWith("GAME OVER")) {
-      alert("GAME OVER");
+    if (msg.data.startsWith("Game completed.")) {
+      alert(msg.data);
     } else if (msg.data.startsWith("Valid Moves:")) {
       message = msg;
       msg.data.slice(13, -1).split(" ").forEach((move) => {
@@ -836,7 +836,7 @@ templ NewBotGame(difficulty int, playAsWhite bool, m *melody.Melody) {
                   el.innerHTML = "&#9817";
                 }
               }
-            });
+            }, { once: true });
           });
 
         } else {
