Restore progress lost

--- a/internal/web/home.templ
+++ b/internal/web/home.templ
@@ -1,16 +1,17 @@
 package web
 
-import (
-    "layouts"
-)
+import "layouts"
 
 templ Home() {
-    @layouts.MainLayout() {
-    <div class="w-10/12 h-full bg-slate-900 flex flex-col justify-center items-center align-middle space-y-10">
-        <div class="w-fit h-8/12 flex flex-col justify-center items-center align-middle space-y-10" id="start">
-            <h1 class="text-lg text-white">YACA (Yet Another Chess App)</h1>
-            <div class="rounded w-full px-10 h-20 bg-slate-600 hover:bg-slate-700 flex flex-col justify-center items-center align-middle z-5" hx-trigger="click" hx-get="/new-game" hx-target="#start" hx-swap="innerHTML">New Game</div>
-        </div>
-    </div>
-    }
+	@layouts.MainLayout() {
+		<h1 class="text-lg text-white">YACA (Yet Another Chess App)</h1>
+		<div
+			class="rounded w-full px-10 h-20 bg-slate-600 hover:bg-slate-700 flex flex-col justify-center items-center align-middle z-5"
+			hx-trigger="click"
+			hx-get="/new-game"
+			hx-target="#start"
+			hx-swap="innerHTML"
+			hx-push-url="true"
+		>New Game</div>
+	}
 }
