--- a/internal/web/layouts/main.layout.templ
+++ b/internal/web/layouts/main.layout.templ
@@ -1,55 +1,79 @@
 package layouts
 
 templ MainLayout(children ...templ.Component) {
-    <!DOCTYPE html>
-    <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta http-equiv="X-UA-Compatible" content="ie=edge">
-        <title>YACA</title>
-        <style>
-            [un-cloak] {
-                display: none !important;
-            }
+	<!DOCTYPE html>
+	<html lang="en">
+		<head>
+			<meta charset="UTF-8"/>
+			<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+			<meta http-equiv="X-UA-Compatible" content="ie=edge"/>
+			<title>YACA</title>
+			<style>
+    [un-cloak] {
+      display: none !important;
+    }
 
 
-            .jsm {
-                font-family: "Noto Sans", sans-serif;
-                font-optical-sizing: auto;
-                font-weight: 500;
-                font-style: normal;
-                font-variation-settings:
-                "wdth" 100;
-            }
+    .jsm {
+      font-family: "Noto Sans", sans-serif;
+      font-optical-sizing: auto;
+      font-weight: 500;
+      font-style: normal;
+      font-variation-settings:
+        "wdth" 100;
+    }
 
-            .gu-mirror{position:fixed!important;margin:0!important;z-index:9999!important;opacity:.8}.gu-hide{display:none!important}.gu-unselectable{-webkit-user-select:none!important;-moz-user-select:none!important;-ms-user-select:none!important;user-select:none!important}.gu-transit{opacity:.2}
-        </style>
-        <link rel="icon" href="../assets/favicon.ico" type="image/x-icon" >
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:wght@500&display=swap" rel="stylesheet">
-    <!--    <link rel="manifest" href="./assets/site.webmanifest">-->
+    .gu-mirror {
+      position: fixed !important;
+      margin: 0 !important;
+      z-index: 9999 !important;
+      opacity: .8
+    }
 
-    </head>
-    <body class="jsm" un-cloak>
-         <div class="w-100vw h-100vh bg-black flex flex-row justify-center items-center align-middle">
-            { children... }
-        </div>
-    <script src="https://cdn.jsdelivr.net/npm/@unocss/runtime/preset-wind.global.js"></script>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@unocss/reset/tailwind.min.css">
-    <script>
-        window.__unocss = {
-            presets: [
-                () => window.__unocss_runtime.presets.presetWind({
-                    cdn: 'https://esm.sh/'
-                }),
-            ],
-        }
-    </script>
-    <script src="https://cdn.jsdelivr.net/npm/@unocss/runtime/core.global.js"></script>
-    <script src="https://unpkg.com/htmx.org@2.0.0" integrity="sha384-wS5l5IKJBvK6sPTKa2WZ1js3d947pvWXbPJ1OmWfEuxLgeHcEbjUUA5i9V5ZkpCw" crossorigin="anonymous"></script>
+    .gu-hide {
+      display: none !important
+    }
 
-    </body>
-    </html>
+    .gu-unselectable {
+      -webkit-user-select: none !important;
+      -moz-user-select: none !important;
+      -ms-user-select: none !important;
+      user-select: none !important
+    }
+
+    .gu-transit {
+      opacity: .2
+    }
+  </style>
+			<link rel="icon" href="../assets/favicon.ico" type="image/x-icon"/>
+			<link rel="preconnect" href="https://fonts.googleapis.com"/>
+			<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin/>
+			<link href="https://fonts.googleapis.com/css2?family=Noto+Sans:wght@500&display=swap" rel="stylesheet"/>
+			<!--    <link rel="manifest" href="./assets/site.webmanifest">-->
+		</head>
+		<body class="jsm" un-cloak>
+			<div class="w-100vw min-h-100vh h-fit bg-black flex flex-row justify-center items-center align-middle">
+				<div
+					class="w-10/12 h-full min-h-screen bg-slate-900 flex flex-col justify-center items-center align-middle space-y-10"
+				>
+					<div class="w-fit h-8/12 flex flex-col justify-center items-center align-middle space-y-10" id="start">
+						{ children... }
+					</div>
+				</div>
+			</div>
+			<script src="https://cdn.jsdelivr.net/npm/@unocss/runtime/preset-wind.global.js"></script>
+			<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@unocss/reset/tailwind.min.css"/>
+			<script>
+    window.__unocss = {
+      presets: [
+        () => window.__unocss_runtime.presets.presetWind({
+          cdn: 'https://esm.sh/'
+        }),
+      ],
+    }
+  </script>
+			<script id="uno" src="https://cdn.jsdelivr.net/npm/@unocss/runtime/core.global.js"></script>
+			<script src="https://unpkg.com/htmx.org@2.0.0" integrity="sha384-wS5l5IKJBvK6sPTKa2WZ1js3d947pvWXbPJ1OmWfEuxLgeHcEbjUUA5i9V5ZkpCw" crossorigin="anonymous"></script>
+		</body>
+	</html>
 }
