--- a/internal/web/components/chooseSideBot.templ
+++ b/internal/web/components/chooseSideBot.templ
@@ -1,10 +1,27 @@
 package components
 
 import (
-    "strconv"
+	"layouts"
+	"strconv"
 )
 
 templ ChooseSideBot(difficulty int) {
-    <div class="rounded w-full px-10 h-20 bg-slate-600 hover:bg-slate-700 flex flex-col justify-center items-center align-middle z-5" hx-trigger="click" hx-get={"/bot-game/"+strconv.Itoa(difficulty)+"/white"} hx-target="#start" hx-swap="innerHTML">White</div>
-    <div class="rounded w-full px-10 h-20 bg-slate-600 hover:bg-slate-700 flex flex-col justify-center items-center align-middle z-5" hx-trigger="click" hx-get={"/bot-game/"+strconv.Itoa(difficulty)+"/black"} hx-target="#start" hx-swap="innerHTML">Black</div>
+	@layouts.MainLayout() {
+		<div
+			class="rounded w-full px-10 h-20 bg-slate-600 hover:bg-slate-700 flex flex-col justify-center items-center align-middle z-5"
+			hx-trigger="click"
+			hx-get={ "/bot-game/" + strconv.Itoa(difficulty) + "/white" }
+			hx-target="#start"
+			hx-swap="innerHTML"
+			hx-push-url="true"
+		>White</div>
+		<div
+			class="rounded w-full px-10 h-20 bg-slate-600 hover:bg-slate-700 flex flex-col justify-center items-center align-middle z-5"
+			hx-trigger="click"
+			hx-get={ "/bot-game/" + strconv.Itoa(difficulty) + "/black" }
+			hx-target="#start"
+			hx-swap="innerHTML"
+			hx-push-url="true"
+		>Black</div>
+	}
 }
