--- a/internal/web/components/botDifficulty.templ
+++ b/internal/web/components/botDifficulty.templ
@@ -5,7 +5,7 @@ import "layouts"
 templ ChooseBotDifficulty() {
 	@layouts.MainLayout() {
 		<div
-			class="rounded w-full px-10 h-20 bg-slate-600 hover:bg-slate-700 flex flex-col justify-center items-center align-middle z-5"
+			class="rounded w-full px-10 h-20 text-black bg-slate-600 hover:bg-slate-700 flex flex-col justify-center items-center align-middle z-5"
 			hx-trigger="click"
 			hx-get="/bot-game/0"
 			hx-target="#start"
@@ -16,7 +16,7 @@ templ ChooseBotDifficulty() {
 			Moves)
 		</div>
 		<div
-			class="rounded w-full px-10 h-20 bg-slate-600 hover:bg-slate-700 flex flex-col justify-center items-center align-middle z-5"
+			class="rounded w-full px-10 h-20 text-black bg-slate-600 hover:bg-slate-700 flex flex-col justify-center items-center align-middle z-5"
 			hx-trigger="click"
 			hx-get="/bot-game/1"
 			hx-target="#start"
@@ -26,7 +26,7 @@ templ ChooseBotDifficulty() {
 			Easy (ELO: 1320)
 		</div>
 		<div
-			class="rounded w-full px-10 h-20 bg-slate-600 hover:bg-slate-700 flex flex-col justify-center items-center align-middle z-5"
+			class="rounded w-full px-10 h-20 text-black bg-slate-600 hover:bg-slate-700 flex flex-col justify-center items-center align-middle z-5"
 			hx-trigger="click"
 			hx-get="/bot-game/2"
 			hx-target="#start"
@@ -36,7 +36,7 @@ templ ChooseBotDifficulty() {
 			Medium (ELO: 2255)
 		</div>
 		<div
-			class="rounded w-full px-10 h-20 bg-slate-600 hover:bg-slate-700 flex flex-col justify-center items-center align-middle z-5"
+			class="rounded w-full px-10 h-20 text-black bg-slate-600 hover:bg-slate-700 flex flex-col justify-center items-center align-middle z-5"
 			hx-trigger="click"
 			hx-get="/bot-game/3"
 			hx-target="#start"
