--- a/internal/web/components/chooseSideBot.templ
+++ b/internal/web/components/chooseSideBot.templ
@@ -8,7 +8,7 @@ import (
 templ ChooseSideBot(difficulty int) {
 	@layouts.MainLayout() {
 		<div
-			class="rounded w-full px-10 h-20 bg-slate-600 hover:bg-slate-700 flex flex-col justify-center items-center align-middle z-5"
+			class="rounded w-full px-10 h-20 text-black bg-slate-600 hover:bg-slate-700 flex flex-col justify-center items-center align-middle z-5"
 			hx-trigger="click"
 			hx-get={ "/bot-game/" + strconv.Itoa(difficulty) + "/white" }
 			hx-target="#start"
@@ -16,7 +16,7 @@ templ ChooseSideBot(difficulty int) {
 			hx-push-url="true"
 		>White</div>
 		<div
-			class="rounded w-full px-10 h-20 bg-slate-600 hover:bg-slate-700 flex flex-col justify-center items-center align-middle z-5"
+			class="rounded w-full px-10 h-20 text-black bg-slate-600 hover:bg-slate-700 flex flex-col justify-center items-center align-middle z-5"
 			hx-trigger="click"
 			hx-get={ "/bot-game/" + strconv.Itoa(difficulty) + "/black" }
 			hx-target="#start"
