--- a/internal/web/home.templ
+++ b/internal/web/home.templ
@@ -6,7 +6,7 @@ templ Home() {
 	@layouts.MainLayout() {
 		<h1 class="text-lg text-white">YACA (Yet Another Chess App)</h1>
 		<div
-			class="rounded w-full px-10 h-20 bg-slate-600 hover:bg-slate-700 flex flex-col justify-center items-center align-middle z-5"
+			class="rounded w-full px-10 h-20 text-black bg-slate-600 hover:bg-slate-700 flex flex-col justify-center items-center align-middle z-5"
 			hx-trigger="click"
 			hx-get="/new-game"
 			hx-target="#start"
