Progress toward resumability

--- a/internal/web/components/botGame.templ
+++ b/internal/web/components/botGame.templ
@@ -1,14 +1,15 @@
 package components
 
 import (
+  "db"
   "engine"
 	"github.com/olahol/melody"
 	"layouts"
 )
 
-templ NewBotGame(difficulty int, playAsWhite bool, m *melody.Melody) {
+templ NewBotGame(difficulty int, playAsWhite bool, m *melody.Melody, g *db.GameState) {
 	@layouts.MainLayout() {
-		{{ engine.ChessMatchWithBot(difficulty, playAsWhite, m) }}
+		{{ engine.ChessMatchWithBot(difficulty, playAsWhite, m, g) }}
 		<div
 			class="flex flex-row justify-center items-center p-4 m-20 bg-slate-600 hover:bg-slate-700 text-white text-md rounded" id="newGameButton" hx-trigger="click"
 			hx-get="/new-game"
