--- a/internal/web/layouts/main.layout.templ
+++ b/internal/web/layouts/main.layout.templ
@@ -45,7 +45,7 @@ templ MainLayout(children ...templ.Component) {
       opacity: .2
     }
   </style>
-			<link rel="icon" href="../assets/favicon.ico" type="image/x-icon"/>
+			<link rel="icon" href="" type="image/x-icon"/>
 			<link rel="preconnect" href="https://fonts.googleapis.com"/>
 			<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin/>
 			<link href="https://fonts.googleapis.com/css2?family=Noto+Sans:wght@500&display=swap" rel="stylesheet"/>
