--- a/internal/web/components/botGame.templ
+++ b/internal/web/components/botGame.templ
@@ -3,11 +3,10 @@ package components
 import (
 	"db"
 	"engine"
-	"github.com/olahol/melody"
 	"layouts"
 )
 
-templ NewBotGame(difficulty int, playAsWhite bool, turn bool,m *melody.Melody, g *db.GameStateRow, d db.Conn) {
+templ NewBotGame(difficulty int, playAsWhite bool, turn bool,m engine.MelodyInterface, g *db.GameStateRow, d db.Conn) {
 	@layouts.MainLayout() {
 		{{ engine.ChessMatchWithBot(difficulty, playAsWhite, turn, m, g, d) }}
 		<div
